# facades/chat-facade/src/openapi.json
@@ -10,6 +10,53 @@
     }
   },
   "paths": {
+    "/auth/google": {
+      "get": {
+        "x-controller-name": "AuthController",
+        "x-operation-name": "authGoogle",
+        "tags": [
+          "AuthController"
+        ],
+        "responses": {
+          "200": {
+            "description": "Google authentication",
+            "content": {
+              "application/x-www-form-urlencoded": {
+                "type": "string"
+              }
+            }
+          }
+        },
+        "description": "",
+        "operationId": "AuthController.authGoogle"
+      }
+    },
+    "/auth/google-auth-redirect": {
+      "get": {
+        "x-controller-name": "AuthController",
+        "x-operation-name": "authGoogleRedirect",
+        "tags": [
+          "AuthController"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Return value of AuthController.authGoogleRedirect",
+            "content": {}
+          }
+        },
+        "parameters": [
+          {
+            "name": "code",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "operationId": "AuthController.authGoogleRedirect"
+      }
+    },
     "/messages/{messageid}/markAsRead": {
       "patch": {
         "x-controller-name": "PubnubMessageController",
